--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@types/node": "^17.0.23"
   },
   "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "immer": "^9.0.14",
     "yaml": "^1.10.2"
   }
 }
