--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "@types/node": "^17.0.23"
   },
   "dependencies": {
+    "@octokit/rest": "^18.12.0",
     "aws-lambda": "^1.0.7",
     "immer": "^9.0.14",
+    "octokit": "^1.8.0",
+    "tweetsodium": "^0.0.6",
     "yaml": "^1.10.2"
   }
 }
