--- a/package.json
+++ b/package.json
@@ -3,11 +3,35 @@
     "@types/node": "^17.0.23"
   },
   "dependencies": {
-    "@octokit/rest": "^18.12.0",
+    "@types/inquirer": "^8.2.1",
     "aws-lambda": "^1.0.7",
+    "esm": "^3.2.25",
     "immer": "^9.0.14",
-    "octokit": "^1.8.0",
-    "tweetsodium": "^0.0.6",
+    "inquirer": "^8.2.4",
     "yaml": "^1.10.2"
+  },
+  "name": "rover-prototype",
+  "description": "Rover is a SAM module generating system, which generates SAM projects based on user requirements. It will have a set of predefined stacks(Auth, CRUD) which are commonly used and  a option to define our custom stacks. It is designed using typescript with SAM CLI support. Currently, it is a CLI-based library that supports Node and Python with a limited set of AWS services.",
+  "version": "1.0.0",
+  "main": "bin/init.js",
+  
+  "scripts": {
+    "start": "tsc bin/init.ts && tsc bin/index.ts && npm install -g .   ",
+    "build": "tsc -p ."
+  },
+  "bin": {
+    "rover": "bin/init.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/antstackio/rover-prototype.git"
+  },
+  "author": "DGB",
+  "license": "ISC",
+  "keywords": [
+    "rover"
+  ],
+  "bugs": {
+    "url": "https://github.com/antstackio/rover-prototype/issues"
   }
 }
